<resources>
    <string name="app_name">JustBakers</string>
    <string name="welcome_app_name">WELCOME to online shopping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_cart"> JustBakers Cart</string>
    <string name="action_jb">JustBakers Cart</string>
    <string name="action_sign_out">SIGN OUT</string>
    <string name="title_activity_hawk">BARGAIN REQUESTS</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="empty_hawk"> :( CURRENTLY YOU DO NOT HAVE ANY ACTIVE BIDS.</string>
    <string name="Loading1">"HANG ON A SECOND, WE ARE LISTING OUR AWESOME PRODUCTS FOR YOU!"</string>
    <string name="Loading2">"HANG ON A SECOND... WE ARE UPDATING YOUR PRODUCT LIST."</string>
    <string name="SuccessfulCart">" PRODUCT SUCCESSFULLY ADDED TO CART "</string>
    <string name="SuccessfulBargain">"BARGAIN REQUEST SUCCESSFULLY COMPLETED"</string>
    <string name="BargainQuestion">"WANT TO BARGAIN ON THE PRODUCT? ENTER THE PRICE"</string>
    <string name="ViewOfferTextView">"<u>View Offer</u>"</string>
    <string name="OfferText">"THAT'S NICE... YOU WANT TO GIVE USER AN OFFER?"</string>
    <string name="OfferHint">"Additional Attractions(Freebies, Warranty etc.)"</string>
    <string name="FinalPriceText">"Final price at which you are willing to sell"</string>
    <string name="bargainError">" You cannot enter a price less than 40% more than 100% of the MRP of product. "</string>
    <string name="SNACKBAR_CART">"YOU HAVE A NICE CHOICE!"</string>
    <string name="Deleted_Cart">"ITEM DELETED FROM THE CART"</string>
    <string name="Deleted_Bargain">"BARGAIN REQUEST SUCCESSFULLY WITHDRAWN"</string>
    <string name="QuantityLimitExceeded">"Cannot Add more quantity"</string>
    <string name="googlepay_status_unavailable">"Google Pay is Unavailable."</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_user">LOGIN </string>
    <string name="action_sign_in_seller">I AM A SELLER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
        <string name="pref_previously_started">yes</string>
    <string name="title_activity_seller">SELLER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="facebook">"http://www.facebook.com/1brainbreaker"</string>
    <string name="googlemail">"globalschoolworx@gmail.com"</string>
    <string name="linkedin">"https://in.linkedin.com/in/brainbreaker"</string>
    <string name="github">https://github.com/brainbreaker</string>
    <string name="action_settings">Settings</string>
    <string name="gateway_replace_name_example">Replace Gateway</string>
    <string name="payments_show_name">Billing Name</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="menu_yourcart">Cart</string>
    <string name="menu_placedorders">Placed Orders</string>
    <string name="menu_deliveredorders">Delivered Orders</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_order_navigation">OrderNavigationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_orders">Orders</string>
    <string name="products">Awesome Products!</string>
    <string name="user_email">%1$s@gmail.com</string>
    <string name="database_version_key">key_database_version</string>
    <string name="max_product_quantity">Max Allowed Quantity : </string>
    <string name="empty_cart">YOU GOT TO PUT SOMETHING IN THE CART!</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_to_just_bakers">Welcome to Just Bakers</string>
    <string name="cancelled">CANCELLED</string>
    <string name="contact_us">Contact Us</string>
    <string name="order_details">Status : %1$s\nOrder Placed On : %2$s\nAmount : %3$s\nIncluding GST : 12%%\n%4$s</string>
    <string name="communicate">COMMUNICATE</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="phone_number">Phone Number</string>
    <string name="change">Change</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sample_number">4</string>
    <string name="delete">delete</string>
    <string name="seller">Seller</string>
    <string name="product_price">Product Price</string>
    <string name="off">OFF</string>
    <string name="product_title">Product Title</string>
    <string name="product_image">Product Image</string>
    <string name="order_placed">Order Placed!</string>
    <string name="your_cart">Your Cart</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="confirm_order">Confirm Order!</string>
    <string name="india_country_code_phone_number">+91</string>
    <string name="your_name">Your Name</string>
    <string name="flat_number">Flat Number</string>
    <string name="society">Society</string>
    <string name="pincode">Pincode</string>
    <string name="update">UPDATE</string>
    <string name="address_label_text">Enter your Address in Pune where delivery of products is required.</string>
    <string name="change_delivery_address">Change Delivery Address!</string>
</resources>