<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wall2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:autofillHints="name"
            android:inputType="textCapWords"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/countryCodePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/india_country_code_phone_number"/>
            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:autofillHints="phoneNumber" />
        </LinearLayout>

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold|italic"
            android:text="@string/address_label_text" />

        <EditText
            android:id="@+id/address_line_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flat_number"
            android:minLines="2"
            android:maxLines="5"
            android:autofillHints="Address Line"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/society_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/society"
            android:minLines="2"
            android:maxLines="2"
            android:autofillHints="society"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/pincode_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pincode"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="pinCode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">
            <info.hoang8f.widget.FButton
                android:id="@+id/updateAddressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableStart="@android:drawable/ic_menu_manage"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                fbutton:cornerRadius="5dp"
                fbutton:fButtonColor="#AE6F33"
                fbutton:shadowColor="#AE6F33" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>