<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/summary_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/solid_border"
        android:fontFamily="serif"
        android:includeFontPadding="true"
        android:maxLines="50"
        android:popupBackground="@drawable/card_shadow"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textCursorDrawable="@drawable/blackback" />

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvAddressView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="12"
            android:layout_marginStart="8dp"
            android:text="@string/delivery_address" />
        <Button
            android:id="@+id/chgAddrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_manage"
            android:text="@string/change"
            android:layout_gravity="center_vertical"
            android:gravity="top|center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#AE6F33"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPhoneView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <info.hoang8f.widget.FButton
        android:id="@+id/checkoutbutton"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_checkout"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/cart"
        android:textSize="18sp"
        android:textStyle="bold"
        fbutton:shadowColor="#AE6F33"
        fbutton:cornerRadius="5dp"
        fbutton:fButtonColor="#AE6F33"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"/>
</LinearLayout>

